--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "codesandbox-import-utils": "^2.1.9",
     "fs-extra": "^8.1.0",
     "glob": "^7.1.4",
+    "humps": "^2.0.1",
     "inquirer": "^6.5.0",
     "minimatch": "^3.0.4",
     "opn": "^6.0.0",
