--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "chalk": "^2.4.2",
     "codesandbox-import-utils": "^2.1.9",
+    "datauri": "^2.0.0",
     "fs-extra": "^8.1.0",
     "glob": "^7.1.4",
     "humps": "^2.0.1",
@@ -25,5 +27,8 @@
     "opn": "^6.0.0",
     "ora": "^3.4.0",
     "shortid": "^2.2.14"
+  },
+  "engines": {
+    "node": ">=11.11.0"
   }
 }
