--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "dev": "ts-node ./example"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Koen Vendrik <k.vendrik@gmail.com>",
+  "license": "MIT",
   "devDependencies": {
     "@types/node": "^12.6.8",
     "prettier": "^1.18.2",
