--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,7 +10,6 @@
     "**/.hg": true,
     "**/.DS_Store": true,
     "**/node_modules": true,
-    "build": true,
     ".dev": true
   },
   "files.insertFinalNewline": true,
@@ -22,8 +21,13 @@
   "editor.formatOnSave": true,
   "editor.formatOnSaveTimeout": 3000,
   "prettier.eslintIntegration": true,
-  "eslint.validate": [
-    {"language": "javascript", "autoFix": true},
-    {"language": "typescript", "autoFix": true},
+  "eslint.validate": [{
+      "language": "javascript",
+      "autoFix": true
+    },
+    {
+      "language": "typescript",
+      "autoFix": true
+    },
   ]
 }
